--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+tmp/
+
+
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,intellij+all,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,intellij+all,windows
